--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -6,9 +6,12 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
   <ImageView
+      android:id="@+id/MyProfilePic"
       android:layout_width="70dp"
       android:layout_height="70dp"
-      tools:src="@tools:sample/avatars"/>
+      tools:src="@tools:sample/avatars"
+      android:contentDescription="Profile Pic"/>
+
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -16,10 +19,10 @@
       android:padding="5dp"
       android:orientation="vertical">
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/myTextView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@tools:sample/lorem[3]" />
+        android:text="dfdfdf"/>
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
