--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -6,12 +6,14 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/border">
+
   <ImageView
       android:id="@+id/MyProfilePic"
       android:layout_width="70dp"
       android:layout_height="70dp"
-      tools:src="@tools:sample/avatars"
-      android:contentDescription="Profile Pic"/>
+      android:contentDescription="Profile Pic"
+      android:onClick="viewProfile"
+      tools:src="@tools:sample/avatars" />
 
   <LinearLayout
       android:layout_width="wrap_content"
