--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
-              android:padding="8dp"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@drawable/border">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/border"
+    android:onClick="viewProfile"
+    android:orientation="horizontal"
+    android:padding="8dp">
 
   <ImageView
       android:id="@+id/MyProfilePic"
@@ -19,25 +20,30 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
-      android:padding="5dp"
-      android:orientation="vertical">
+      android:onClick="viewProfile"
+      android:orientation="vertical"
+      android:padding="5dp">
+
     <TextView
         android:id="@+id/myTextView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="viewProfile"
         android:text="vdsfsdfsffdfsdf"
-        android:textColor="@color/cardview_light_background"/>
+        android:textColor="@color/cardview_light_background" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text=""
-        android:textColor="@color/cardview_light_background"/>
+        android:textColor="@color/cardview_light_background"
+        tools:text="" />
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text=""
-        android:textColor="@color/cardview_light_background"/>
+        android:textColor="@color/cardview_light_background"
+        tools:text="" />
   </LinearLayout>
 </LinearLayout>
