--- a/app/src/main/res/layout/content_user_profile.xml
+++ b/app/src/main/res/layout/content_user_profile.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <RatingBar
@@ -39,7 +39,37 @@
                 android:layout_height="wrap_content"
                 android:text="LastName"
                 android:textSize="24sp" />
+
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/bioTextView"
+            android:layout_width="match_parent"
+            android:layout_height="178dp"
+            android:layout_weight="1"
+            android:text="BIO/DESCRIPTION GOES HERE"
+            android:textSize="36sp" />
+
+        <TextView
+            android:id="@+id/videoLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Demo Reel"
+            android:textSize="18sp" />
+
+        <VideoView
+            android:id="@+id/demoReel"
+            android:layout_width="match_parent"
+            android:layout_height="278dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/playButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="[Play]" />
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
