Data from recycler view demo Shows name from item when clicked TODO start new profile activity on data click

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -43,6 +43,7 @@
 
             <ImageView
                 android:id="@+id/profile_pic"
+                android:scaleType="fitXY"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_empty_profile_pic_v4" />
