Profiles now recieve data from the calling list view item

--- a/app/src/main/res/layout/content_user_profile.xml
+++ b/app/src/main/res/layout/content_user_profile.xml
@@ -22,7 +22,7 @@
             android:stepSize="1" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textViewFirstName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="FirstName"
