--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".messengerActivity">
 
+    <ImageButton
+        android:id="@+id/back_button2"
+        android:layout_width="66dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/ic_arrow_v4"
+        android:onClick="goBack"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_arrow_v4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
