--- a/app/src/main/res/layout/activity_user_scroll_view.xml
+++ b/app/src/main/res/layout/activity_user_scroll_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScrollingMultipleItems">
+    tools:context=".data.ScrollingMultipleItems">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/userListView"
