Get images into thumbnails

--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -11,8 +11,7 @@
       android:id="@+id/MyProfilePic"
       android:layout_width="70dp"
       android:layout_height="70dp"
-      android:contentDescription="Profile Pic"
-      tools:src="@tools:sample/avatars" />
+      android:contentDescription="Profile Pic" />
 
   <LinearLayout
       android:layout_width="wrap_content"
