--- a/app/src/main/res/layout/content_me_user_profile.xml
+++ b/app/src/main/res/layout/content_me_user_profile.xml
@@ -28,12 +28,19 @@
             android:layout_weight="1"
             android:text="Avg Rating:" />
 
-        <TextView
-            android:id="@+id/textViewFirstName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="FirstName"
-            android:textSize="30sp" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewFirstName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="FirstName"
+                android:textSize="30sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
