--- a/app/src/main/res/layout/content_me_user_profile.xml
+++ b/app/src/main/res/layout/content_me_user_profile.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".otherUserProfile"
-    tools:showIn="@layout/activity_user_profile">
+    tools:context=".meUserProfile"
+    tools:showIn="@layout/activity_me_user_profile">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,17 +29,25 @@
             android:text="Avg Rating:" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textViewFirstName"
-                android:layout_width="match_parent"
+                android:id="@+id/me_profile_textViewFirstName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="FirstName"
                 android:textSize="30sp" />
+
+            <ImageButton
+                android:id="@+id/btnEditFirstName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -47,12 +55,25 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textViewLastName"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="LastName"
-                android:textSize="24sp" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/me_profile_textViewLastName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="LastName"
+                    android:textSize="24sp" />
+
+                <ImageButton
+                    android:id="@+id/btnEditLastName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:srcCompat="@android:drawable/ic_menu_edit" />
+            </LinearLayout>
 
         </LinearLayout>
 
