--- a/app/src/main/res/layout/activity_select_artist_or_venue.xml
+++ b/app/src/main/res/layout/activity_select_artist_or_venue.xml
@@ -15,7 +15,8 @@
         android:text="@string/i_m_a_venue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        android:onClick="btnVenueClick"/>
 
     <Button
         android:id="@+id/button"
@@ -26,7 +27,8 @@
         android:text="@string/i_m_an_artist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        android:onClick="btnArtistClick"/>
 
     <TextView
         android:id="@+id/textView5"
