--- a/app/src/main/res/layout/content_me_user_profile.xml
+++ b/app/src/main/res/layout/content_me_user_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".meUserProfile"
+    tools:context=".MeUserProfile"
     tools:showIn="@layout/activity_me_user_profile">
 
     <LinearLayout
