--- a/app/src/main/res/layout/content_other_user_profile.xml
+++ b/app/src/main/res/layout/content_other_user_profile.xml
@@ -21,12 +21,25 @@
             android:numStars="5"
             android:stepSize="1" />
 
-        <TextView
-            android:id="@+id/avgRating"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Avg Rating:" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/avgRating"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Avg Rating:" />
+
+            <TextView
+                android:id="@+id/avgRatingVal"
+                android:layout_width="680dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
