--- a/app/src/main/res/layout/content_me_user_profile.xml
+++ b/app/src/main/res/layout/content_me_user_profile.xml
@@ -104,7 +104,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/bioTextView"
+            android:id="@+id/me_bioTextView"
             android:layout_width="match_parent"
             android:layout_height="459dp"
             android:layout_weight="1"
